# ml-ThyRP

./: Dockerfile  README.md  docker-commands.txt  fly.toml  main.py  notebook.ipynb  predict.py  pyproject.toml  test.py  train.py
.github/workflows/: fly-deploy.yml
